--- a/related.tex
+++ b/related.tex
@@ -7,14 +7,14 @@ Our work is at the intersection of congestion control, scheduling, and middlebox
 
 \Para{Aggregating congestion information} A recent proposal~\cite{fivecomps} observes that the majority of today's traffic is owned by a few entities.
 %, and that a single entity might have a large number of flows traversing the same bottleneck link. 
-This observation implies that we can expect to have a small number of bundles across the Internet, each with large amounts of traffic, resulting in greater scheduling opportunities within a bundle. Note that the proposal uses its observation to highlight the benefits of sharing information across a given customer's traffic when configuring congestion control algorithms at the endhosts. This is orthogonal to our goal of scheduling such traffic by introducing a middlebox without touching individual endhosts.
+This observation implies that we can expect to have a small number of bundles across the Internet, each with large amounts of traffic, resulting in greater scheduling opportunities within a bundle. Note that the proposal uses its observation to highlight the benefits of sharing information across a given customer's traffic when configuring congestion control algorithms at the endhosts. This is orthogonal to our goal of scheduling such traffic by introducing a middlebox without modifying end hosts.
 
 
-\Para{Enabling packet scheduling in wide-area networks} There have been some recent efforts towards enabling the benefits of packet scheduling in wide-area networks. PIFO~\cite{pifo} is a programmable priority queue that can be configured to express different scheduling policies at routers. However, not only does it changing the in-network routers, but it also suffers from the issue of an ISP's limited visibility into the traffic to choose desired policies (and limited incentives to enforce them). UPS~\cite{ups} goes a step further by allowing different scheduling policies to be expressed from the edge via header initialization, but also requires changing the routers.
+\Para{Packet scheduling} There have been some recent efforts towards enabling the benefits of packet scheduling. PIFO~\cite{pifo} is a programmable priority queue that can be configured to express different scheduling policies at routers. However, not only does it changing the in-network routers, but it also suffers from the issue of an ISP's limited visibility into the traffic to choose desired policies (and limited incentives to enforce them). UPS~\cite{ups} allows different scheduling policies to be expressed from the edge via header initialization, but also requires changing routers.
 %However, since queuing still occurs in the middle of the network, it relies on the customers targeting a common global objective, or on the network operators isolating different customers' traffic, both of which are difficult to realize. 
-\name, with its more tractable goals, provides a solution that is far easier to deploy, without requiring any cooperation from the carrier networks. 
+\name provides a solution that does not require any cooperation from downstream networks in other organizations.
 
-In that spirit, \name is much closer to, and is inspired from, OverQoS~\cite{overqos}. OverQoS, proposed more than a decade ago, aimed to provide QoS benefits in the Internet by aggregating and managing traffic at the nodes of an overlay network~\cite{ron}. Given the aggregation opportunities today, where a few content providers generate majority of the Internet traffic~\cite{fivecomps}, we observe that the time for reaping benefits from such designs has arrived. These recent trends, though, also allow for a simpler and more easily deployable approach that \name adopts, where rather than deploying an overlay network, just deploying a middlebox at the sending and the receiving domains can result in significant amounts of traffic aggregation. In addition, \name provides a novel mechanism to \emph{move} the in-network queues, and actively gain the power to schedule across the bundled traffic. 
+In that spirit, \name is closer to OverQoS~\cite{overqos}. Proposed more than a decade ago, OverQoS aimed to provide QoS benefits in the Internet by aggregating and managing traffic at the nodes of an overlay network~\cite{ron}. Given the aggregation opportunities today, where a few content providers generate majority of the Internet traffic~\cite{fivecomps}, we observe that the time for reaping benefits from such designs may have arrived. Recent trends enable a simpler and more deployable approach that \name adopts, where rather than deploying an overlay network, just deploying a middlebox at the sending and the receiving domains can result in significant amounts of traffic aggregation. In addition, \name provides a novel mechanism to \emph{move} the in-network queues, and actively gain the power to schedule across the bundled traffic. 
 
 
 
