--- a/graphs/waterfall.Rnw
+++ b/graphs/waterfall.Rnw
@@ -1,6 +1,6 @@
 \begin{figure}
     \centering
-<<eval:waterfall,fig.showtext=TRUE,cache=TRUE,echo=FALSE,message=FALSE,warning=FALSE,fig.width='\\columnwidth',fig.height=2>>=
+<<eval:waterfall,fig.showtext=TRUE,cache=TRUE,echo=FALSE,message=FALSE,warning=FALSE,fig.width='\\columnwidth',fig.height=3>>=
 library(ggplot2)
 library(showtext)
 font_add_google("Lato")
@@ -16,7 +16,7 @@ ggplot(df, aes(x=Time, y=Tput, colour=Flow)) +
     ylab("Throughput\n(Mbps)") +
     theme_minimal() +
     scale_colour_brewer(type="qual", palette=6) + 
-    facet_wrap(~Exp, labeller = as_labeller(facet_labels)) +
+    facet_wrap(~Exp, labeller = as_labeller(facet_labels), nrow=2, ncol=1) +
     guides(colour=FALSE) +
     theme(
         legend.position=c(0.85, 0.35),
