--- a/e2e.tex
+++ b/e2e.tex
@@ -5,6 +5,6 @@
 \includegraphics[width=\maxwidth]{figure/eval:e2e-1} 
 
 \end{knitrout}
-    \caption{}
+    \caption{\name still provides benefits when the endhosts use different congestion control algorithms.}
     \label{fig:eval:e2e}
 \end{figure}
